fixed cloud name overflow and added tooltip

--- a/public/packages/css/stylesheets/common.css
+++ b/public/packages/css/stylesheets/common.css
@@ -172,3 +172,8 @@ body {
   background-image: url(../../img/noisy_net.png);
   box-shadow: 0px 1px 5px rgba(12, 12, 12, 0.4);
 }
+
+.cloud-name {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
